--- a/dev-env/Dockerfile
+++ b/dev-env/Dockerfile
@@ -53,7 +53,7 @@ RUN mkdir code/vtk/build_release && \
           -DVTK_QT_VERSION=5 \
           -DCMAKE_DEBUG_POSTFIX=d \
           -DCMAKE_BUILD_TYPE=Release \
-          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" .. && \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" .. && \
     make -j24 && \
     sudo make install
 
@@ -72,7 +72,7 @@ RUN mkdir code/opencv/build_release && \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
           -DCMAKE_BUILD_TYPE=Release \
-          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" \
           -DBUILD_PERF_TESTS=OFF \
           -DBUILD_TESTS=OFF .. && \
     make -j24 && \
@@ -88,15 +88,18 @@ RUN git clone -b 8.0 https://github.com/nvidia/nccl code/nccl && \
 
 RUN git clone https://github.com/google/protobuf code/protobuf && \
     cd code/protobuf && ./autogen.sh && ./configure --disable-shared && \
-    sed -i 's,CXXFLAGS = -g -DNDEBUG,CXXFLAGS = -g -DNDEBUG -fPIC,g' src/Makefile && \
-    make -j24 && sudo make install
+    sed -i 's,CXXFLAGS =  -g -DNDEBUG,CXXFLAGS = -g -DNDEBUG -fPIC,g' src/Makefile && \
+    make -j24 && sudo make install && \
+    cd python && python setup.py build && sudo python setup.py install
+
+RUN sudo apt-get install -y python-lmdb
 
 RUN git clone -b boostlog https://github.com/dtmoodie/caffe code/caffe
 
 RUN mkdir code/caffe/build && cd code/caffe/build && \
     cmake -DCMAKE_BUILD_TYPE=Release \
           -DUSE_GLOG=true \
-          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" \
           -DCUDA_ARCH_NAME="Manual" \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
@@ -113,7 +116,7 @@ RUN mkdir code/caffe/build && cd code/caffe/build && \
 RUN mkdir code/caffe/build_blog_release && cd code/caffe/build_blog_release && \
     cmake -DCMAKE_BUILD_TYPE=Release \
           -DUSE_GLOG=false \
-          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" \
           -DCUDA_ARCH_NAME="Manual" \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
@@ -140,7 +143,7 @@ RUN cd code/mxnet && mkdir build && cd build && \
 
 RUN git clone https://github.com/dtmoodie/flann code/flann && \
     cd code/flann && mkdir build && cd build && \
-    cmake -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" \
+    cmake -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" \
           -DCUDA_ARCH_NAME="Manual" \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
@@ -170,7 +173,7 @@ RUN git clone https://github.com/pointcloudlibrary/pcl code/pcl && \
           -DBUILD_GPU=ON \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 5.2 6.0" \
           -DCUDA_ARCH_PTX="3.0 5.0 6.0" \
-          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer" .. && \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -DNDEBUG -g" .. && \
     make -j24 && \
     sudo make install
 
@@ -179,7 +182,12 @@ RUN sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) 
              > /etc/apt/sources.list.d/ros-latest.list' && \
     sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 0xB01FA116 && \
     sudo apt-get update && \
-    sudo apt-get install ros-kinetic-desktop-full -y
+    sudo apt-get install ros-kinetic-desktop-full -y && \
+    sudo apt-get remove python-opencv libopencv-calib3d2.4v5 libopencv-contrib2.4v5 \
+        libopencv-core2.4v5 libopencv-features2d2.4v5 libopencv-flann2.4v5 \
+        libopencv-highgui2.4v5 libopencv-imgproc2.4v5 libopencv-legacy2.4v5 \
+        libopencv-ml2.4v5 libopencv-objdetect2.4v5 libopencv-photo2.4v5 \
+        libopencv-video2.4v5 -y
 
 add qt* /home/developer/
 RUN sudo chown developer:developer /home/developer/qt-creator* && \
