updated deploy and dev-env build scripts

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -59,7 +59,7 @@ RUN mkdir code/vtk/build_release && \
           .. && \
     make -j24 && \
     sudo make install && \
-    cd /code/vtk && rm -fr build_release
+    make clean
 
 
 # ===========================================================
@@ -94,7 +94,7 @@ RUN mkdir code/opencv/build_release && \
           -DBUILD_TESTS=OFF .. && \
     make -j24 && \
     sudo make install && \
-    cd /code/opencv && rm -fr build_release
+    make clean
 
 
 # ===========================================================
@@ -117,24 +117,6 @@ RUN git clone https://github.com/google/protobuf code/protobuf && \
 
 RUN git clone -b sanghoon-dev_pvanet https://github.com/dtmoodie/caffe code/caffe
 
-#RUN mkdir code/caffe/build && cd code/caffe/build && \
-#    cmake -DCMAKE_BUILD_TYPE=Release \
-#          -DUSE_GLOG=true \
-#          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -g -O3 -DNDEBUG" \
-#          -DCUDA_ARCH_NAME="Manual" \
-#          -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
-#          -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
-#          -DNCCL_INCLUDE_DIR=/code/nccl/build/include \
-#          -DNCCL_LIBRARY=/code/nccl/build/lib/libnccl.so \
-#          -DPROTOBUF_LIBRARY=/usr/local/lib/libprotobuf.a \
-#          -DPROTOBUF_LITE_LIBRARY=/usr/local/lib/libprotobuf-lite.a \
-#          -DPROTOBUF_PROTOC_EXECUTABLE=/usr/local/bin/protoc \
-#          -DPROTOBUF_PROTOC_LIBRARY=/usr/local/lib/libprotoc.a \
-#          -DPROTOBUF_INCLUDE_DIR=/usr/local/include .. && \
-#    make -j24 && \
-#    sudo make install
-
-
 RUN mkdir code/caffe/build_blog_release && cd code/caffe/build_blog_release && \
     cmake -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_INSTALL_PREFIX=/usr/local \
@@ -152,21 +134,8 @@ RUN mkdir code/caffe/build_blog_release && cd code/caffe/build_blog_release && \
           -DPROTOBUF_INCLUDE_DIR=/usr/local/include .. && \
     make -j24 && \
     sudo make install && \
-    cd /code/caffe && rm -fr build_blog_release
+    make clean
 
-
-# ===========================================================
-# build mxnet
-
-#RUN sudo apt install libopenblas-dev -y
-#RUN git clone https://github.com/dtmoodie/mxnet code/mxnet && cd code/mxnet && git submodule update --init --recursive
-#RUN cd code/mxnet && mkdir build && cd build && \
-#    cmake -DEXTRA_OPERATORS="example/ssd/operator" \
-#          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -g -O3 -DNDEBUG" \
-#          -DCUDA_ARCH_NAME="Manual" \
-#          -DCUDA_ARCH_BIN="6.0 6.1" \
-#          -DCUDA_ARCH_PTX="6.0" .. && \
-#    make -j24
 
 
 # ==========================================================
@@ -180,7 +149,7 @@ RUN git clone https://github.com/dtmoodie/flann code/flann && \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
           -DBUILD_CUDA_LIB=True .. && \
      make -j24 && sudo make install && \
-     cd /code/flann && rm -fr build
+     make clean
 
 
 # ==========================================================
@@ -194,17 +163,7 @@ RUN git clone https://github.com/pointcloudlibrary/pcl code/pcl && \
           -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -g -DNDEBUG" .. && \
     make -j24 && \
     sudo make install && \
-    cd /code/pcl && rm -fr build
-
-# ==========================================================
-# build tensorflow
-#RUN git clone https://github.com/tensorflow/tensorflow /code/tensorflow && \
-#    cd /code/tensorflow && \
-#    git checkout r1.0 && \
-#    echo "deb [arch=amd64] http://storage.googleapis.com/bazel-apt stable jdk1.8" | sudo tee /etc/apt/sources.list.d/bazel.list && \
-#    curl https://bazel.build/bazel-release.pub.gpg | sudo apt-key add - && \
-#    sudo apt-get update && sudo apt-get install bazel && \
-#    sudo apt-get install python-numpy python-dev python-pip python-wheel
+    make clean
 
 RUN sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" \
              > /etc/apt/sources.list.d/ros-latest.list' && \
@@ -220,13 +179,7 @@ RUN jupyter notebook --generate-config
 RUN echo "c.NotebookApp.ip = '*'" >> /home/developer/.jupyter/jupyter_notebook_config.py
 CMD jupyter-notebook
 
-
-# ===========================================================
-# basic debugging tools
-#RUN sudo apt-get update
-#RUN sudo apt-get install -y gdb gdbserver python3-pil python3-matplotlib
-#ADD cv_imshow.py /home/developer/code/cv_imshow.py
-#RUN echo "source /home/developer/code/cv_imshow.py" > /home/developer/.gdbinit
-#add qt* /home/developer/
-#RUN sudo chown developer:developer /home/developer/qt-creator* && \
-#    chmod +x /home/developer/qt-creator*
+RUN cd code && git clone https://github.com/emweb/wt && \
+    cd wt && mkdir build && \
+    cd build && cmake .. && make -j24 && \
+    sudo make install && make clean
