opencv build bugfix build two versions of caffe, boost log and google log etc

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,6 +1,6 @@
 from nvidia/cuda:8.0-cudnn5-devel-ubuntu16.04
 
-RUN apt-get -y  update
+RUN apt-get -y update
 
 RUN apt-get install -y build-essential libboost1.58-all-dev git wget cmake cmake-gui libqt5*5 \
                        qttools5-dev libqt5x11extras5-dev sudo wget \
@@ -18,7 +18,7 @@ RUN apt-get install -y build-essential libboost1.58-all-dev git wget cmake cmake
                        python-dev python-numpy python-matplotlib python-skimage \
                        python-pip python-sklearn
 
-RUN pip install setuptools jupyter
+RUN pip install ipython==5.0 setuptools jupyter
 
 # the below code is for setting up a non root user acount in the docker image for exporting X11 sessions.
 ENV USERNAME developer
@@ -46,7 +46,7 @@ RUN git clone http://github.com/kitware/cmake code/cmake && \
     mkdir code/cmake/build && \
     cd code/cmake/build && \
     cmake .. -DBUILD_QtDialog=ON && \
-    make -j24 && sudo make install && \
+    make -j$(nproc) && sudo make install && \
     cd .. && \
     rm -fr build
 
@@ -64,19 +64,30 @@ RUN mkdir code/vtk/build_release && \
           -DModule_vtkGUISupportQtOpenGL=ON \
           -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -g -O3 -DNDEBUG" \
           .. && \
-    make -j24 && \
+    make -j$(nproc) && \
     sudo make install && \
     make clean
 
+# build protobuf from source at a specific commit for caffe to work correctly.
+# need source build to force some static compile flags to make it play nicely with
+# ROS binary build
+RUN git clone https://github.com/google/protobuf code/protobuf && \
+    cd code/protobuf && \
+    git checkout f8ca3acd2924421dc18f685c629a6e54875ac113  && \
+    ./autogen.sh && ./configure --disable-shared && \
+    sed -i 's,CXXFLAGS =  -g -DNDEBUG,CXXFLAGS = -g -DNDEBUG -fPIC,g' src/Makefile && \
+    make -j$(nproc) && sudo make install \
+    && cd python && python setup.py build \
+    && sudo python setup.py install \
+    && cd /code && sudo rm -fr protobuf
 
 # ===========================================================
 # build OpenCV from source to have CUDA 8.0 support and pascal gpu support
 
 RUN git clone -b allocator_improvements \
         http://github.com/dtmoodie/opencv code/opencv && \
-    git clone http://github.com/dtmoodie/opencv_contrib code/opencv_contrib
-
-RUN mkdir code/opencv/build_release && \
+    git clone http://github.com/dtmoodie/opencv_contrib code/opencv_contrib && \
+    mkdir code/opencv/build_release && \
     cd /code/opencv/build_release && \
     cmake -DCMAKE_DEBUG_POSTFIX=d \
           -DWITH_CUBLAS=True \
@@ -86,10 +97,11 @@ RUN mkdir code/opencv/build_release && \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
           -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_CXX_FLAGS="-std=c++11" \
           -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -g -O3 -DNDEBUG" \
+          -DCUDA_PROPAGATE_HOST_FLAGS=ON \
+          -DCUDA_NVCC_FLAGS="-std=c++11;--expt-relaxed-constexpr" \
           -DCMAKE_SHARED_LINKER_FLAGS="-fPIC" \
-          -DOPENCV_EXTRA_MODULES_PATH="/code/opencv_contrib/modules" \
-          -DBUILD_opencv_python2=OFF \
           -DBUILD_PERF_TESTS=OFF \
           -DBUILD_opencv_text=off \
           -DBUILD_opencv_datasets=off \
@@ -99,7 +111,7 @@ RUN mkdir code/opencv/build_release && \
           -DPROTOBUF_PROTOC_LIBRARY=/usr/local/lib/libprotoc.a \
           -DPROTOBUF_INCLUDE_DIR=/usr/local/include \
           -DBUILD_TESTS=OFF .. && \
-    make -j24 && \
+    make -j$(nproc) && \
     sudo make install && \
     make clean
 
@@ -111,16 +123,6 @@ RUN mkdir code/opencv/build_release && \
 RUN git clone -b 8.0 https://github.com/nvidia/nccl code/nccl && \
     cd code/nccl && \
     make -j24
-
-RUN git clone https://github.com/google/protobuf code/protobuf && \
-    cd code/protobuf && \
-    git checkout f8ca3acd2924421dc18f685c629a6e54875ac113  && \
-    ./autogen.sh && ./configure --disable-shared && \
-    sed -i 's,CXXFLAGS =  -g -DNDEBUG,CXXFLAGS = -g -DNDEBUG -fPIC,g' src/Makefile && \
-    make -j24 && sudo make install \
-    && cd python && python setup.py build \
-    && sudo python setup.py install \
-    && cd /code && sudo rm -fr protobuf
 
 RUN git clone -b sanghoon-dev_pvanet https://github.com/dtmoodie/caffe code/caffe
 
@@ -139,10 +141,28 @@ RUN mkdir code/caffe/build_blog_release && cd code/caffe/build_blog_release && \
           -DPROTOBUF_PROTOC_EXECUTABLE=/usr/local/bin/protoc \
           -DPROTOBUF_PROTOC_LIBRARY=/usr/local/lib/libprotoc.a \
           -DPROTOBUF_INCLUDE_DIR=/usr/local/include .. && \
-    make -j24 && \
+    make -j$(nproc) && \
     sudo make install && \
     make clean
 
+RUN mkdir code/caffe/build && cd code/caffe/build && \
+    cmake -DCMAKE_BUILD_TYPE=Release \
+          -DCMAKE_INSTALL_PREFIX=/usr/local \
+          -DUSE_GLOG=true \
+          -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -g -O3 -DNDEBUG" \
+          -DCUDA_ARCH_NAME="Manual" \
+          -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
+          -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
+          -DNCCL_INCLUDE_DIR=/code/nccl/build/include \
+          -DNCCL_LIBRARY=/code/nccl/build/lib/libnccl.so \
+          -DPROTOBUF_LIBRARY=/usr/local/lib/libprotobuf.a \
+          -DPROTOBUF_LITE_LIBRARY=/usr/local/lib/libprotobuf-lite.a \
+          -DPROTOBUF_PROTOC_EXECUTABLE=/usr/local/bin/protoc \
+          -DPROTOBUF_PROTOC_LIBRARY=/usr/local/lib/libprotoc.a \
+          -DPROTOBUF_INCLUDE_DIR=/usr/local/include .. && \
+    make -j$(nproc) && \
+    sudo make install && \
+    make clean
 
 
 # ==========================================================
@@ -155,7 +175,7 @@ RUN git clone https://github.com/dtmoodie/flann code/flann && \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0 6.1" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
           -DBUILD_CUDA_LIB=True .. && \
-     make -j24 && sudo make install && \
+     make -j$(nproc) && sudo make install && \
      make clean
 
 
@@ -168,7 +188,7 @@ RUN git clone https://github.com/pointcloudlibrary/pcl code/pcl && \
           -DCUDA_ARCH_BIN="3.0 3.5 5.0 6.0" \
           -DCUDA_ARCH_PTX="3.0 3.5 5.0 6.0" \
           -DCMAKE_CXX_FLAGS_RELEASE="-fno-omit-frame-pointer -O3 -g -DNDEBUG" .. && \
-    make -j24 && \
+    make -j$(nproc) && \
     sudo make install && \
     make clean
 
@@ -188,5 +208,22 @@ CMD jupyter-notebook
 
 RUN cd code && git clone https://github.com/emweb/wt && \
     cd wt && mkdir build && \
-    cd build && cmake .. && make -j24 && \
+    cd build && cmake .. && make -j$(nproc) && \
     sudo make install && make clean
+
+RUN sudo apt-get install -y libopenblas-dev python-dev python-setuptools python-numpy
+
+RUN cd code && git clone --recursive https://github.com/dmlc/mxnet && \
+    cd mxnet && \
+    mkdir build && cd build && \
+    cmake .. -DOpenCV_DIR=/usr/local/share/OpenCV \
+      -DBLAS=Open \
+      -DUSE_CUDA=ON -DUSE_CUDNN=ON && \
+    make -j$(nproc)
+
+RUN cd code/mxnet/python && \
+    mkdir /code/mxnet/lib && \
+    cp /code/mxnet/build/libmxnet.so /code/mxnet/lib/ && \
+    sudo python setup.py install
+      
+RUN pip install graphviz
